# test-deploy-site

./: Dockerfile  docker-compose.yml  ngix.conf  package.json  pyproject.toml
app/: .env  config.py  database.py  dependencies.py  errors.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_12_17_2337-18743a019e87_create_user_model.py  2024_12_30_1845-42eba246bf20_create_address_table.py
app/core/: config.py  database.py  password_hash.py
app/crud/: address.py  user.py
app/models/: __init__.py  user.py
app/routers/: user.py
app/schemas/: jwt.py  user.py
nginx/: Dockerfile  nginx.conf
static/: styles.css
static/javascript/: login.js
templates/: index.html
templates/html/: check.html  home.html
