[tool.poetry]
name = "e-commerce-project"
version = "0.1.0"
description = ""
authors = ["Andrey B <TakeItEasyO@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
