
[tool.poetry]
name = "e-commerce-project"
version = "0.1.0"
description = ""
authors = ["Andrey B <TakeItEasyO@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
pyjwt = "^2.10.1"
uvicorn = "0.21.0"
python-multipart = "^0.0.20"
ruff = "^0.8.4"
jinja2 = "^3.1.5"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
